// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack.config should return settings when NODE_ENV is development 1`] = `
Object {
  "devServer": Object {
    "contentBase": ".",
    "hot": true,
    "inline": true,
    "port": 8080,
    "quiet": true,
  },
  "devtool": "cheap-module-eval-source-map",
  "entry": Array [
    "stab",
  ],
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.js\\$/,
        "use": Object {
          "loader": "babel-loader",
          "options": Object {
            "compact": true,
            "presets": Array [
              Array [
                "env",
                Object {
                  "modules": false,
                  "targets": Object {
                    "browsers": "last 1 version",
                  },
                },
              ],
              "react",
              "stage-1",
            ],
          },
        },
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "style-loader",
          "css-loader",
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.md\\$/,
        "use": Array [
          "html-loader",
          "markdown-loader",
        ],
      },
      Object {
        "test": /\\\\\\.\\(png\\|jpg\\|gif\\|svg\\?\\)\\$/,
        "use": Array [
          "file-loader",
          "image-webpack-loader",
        ],
      },
      Object {
        "test": /\\\\\\.\\(eot\\|ttf\\|woff2\\?\\)\\$/,
        "use": "file-loader",
      },
    ],
  },
  "name": "test",
  "output": Object {
    "filename": "[hash].js",
    "path": "stab",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "process.env.BASE_PATH": "\\".\\"",
        "process.env.CSS_PATH": "\\"stub/.\\"",
        "process.env.JS_PATH": "\\"stub/.\\"",
        "process.env.REMOTE_ORIGIN_URL": undefined,
        "process.env.SIDEBAR": "true",
        "process.env.SLIDE_PATH": "\\"stub/.\\"",
        "process.env.SNS": undefined,
        "process.env.THEME": "\\"\\"",
        "process.env.TITLE": "\\"test\\"",
        "process.env.URL": "\\"url\\"",
      },
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "description": "description",
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "image": "thumbnail",
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "siteName": "siteName",
        "template": "stub/stabDir",
        "templateParameters": [Function],
        "title": "test",
        "url": "url",
        "xhtml": false,
      },
    },
    StylishReporter {
      "rendered": Object {
        "footer": false,
        "header": false,
      },
      "state": Object {
        "active": 0,
        "hashes": Array [],
        "instances": 0,
        "time": 0,
        "totals": Object {
          "errors": 0,
          "time": 0,
          "warnings": 0,
        },
      },
    },
    HotModuleReplacementPlugin {
      "fullBuildTimeout": 200,
      "multiStep": undefined,
      "options": Object {},
      "requestTimeout": 10000,
    },
  ],
}
`;

exports[`webpack.config should return settings when NODE_ENV is production 1`] = `
Object {
  "entry": Array [
    "stab",
  ],
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\\\\\.js\\$/,
        "use": Object {
          "loader": "babel-loader",
          "options": Object {
            "compact": true,
            "presets": Array [
              Array [
                "env",
                Object {
                  "modules": false,
                  "targets": Object {
                    "browsers": "last 1 version",
                  },
                },
              ],
              "react",
              "stage-1",
            ],
          },
        },
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          Object {
            "loader": "stub",
            "options": Object {
              "omit": 1,
              "remove": true,
            },
          },
          "style-loader",
          "css-loader",
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "plugins": Array [
                [Function],
                [Function],
                [Function],
              ],
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.md\\$/,
        "use": Array [
          "html-loader",
          "markdown-loader",
        ],
      },
      Object {
        "test": /\\\\\\.\\(png\\|jpg\\|gif\\|svg\\?\\)\\$/,
        "use": Array [
          "file-loader",
          "image-webpack-loader",
        ],
      },
      Object {
        "test": /\\\\\\.\\(eot\\|ttf\\|woff2\\?\\)\\$/,
        "use": "file-loader",
      },
    ],
  },
  "name": "test",
  "optimization": Object {
    "minimizer": Array [
      UglifyJsPlugin {
        "options": Object {
          "cache": false,
          "exclude": undefined,
          "extractComments": false,
          "include": undefined,
          "parallel": false,
          "sourceMap": false,
          "test": /\\\\\\.js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "uglifyOptions": Object {
            "output": Object {
              "comments": /\\^\\\\\\*\\*!\\|@preserve\\|@license\\|@cc_on/,
            },
          },
          "warningsFilter": [Function],
        },
        "sourceMapsCache": WeakMap {},
      },
    ],
  },
  "output": Object {
    "filename": "[hash].js",
    "path": "stab",
  },
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "process.env.BASE_PATH": "\\".\\"",
        "process.env.CSS_PATH": "\\"stub/.\\"",
        "process.env.JS_PATH": "\\"stub/.\\"",
        "process.env.REMOTE_ORIGIN_URL": undefined,
        "process.env.SIDEBAR": "true",
        "process.env.SLIDE_PATH": "\\"stub/.\\"",
        "process.env.SNS": undefined,
        "process.env.THEME": "\\"\\"",
        "process.env.TITLE": "\\"test\\"",
        "process.env.URL": "\\"url\\"",
      },
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "description": "description",
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "image": "thumbnail",
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "siteName": "siteName",
        "template": "stub/stabDir",
        "templateParameters": [Function],
        "title": "test",
        "url": "url",
        "xhtml": false,
      },
    },
    StylishReporter {
      "rendered": Object {
        "footer": false,
        "header": false,
      },
      "state": Object {
        "active": 0,
        "hashes": Array [],
        "instances": 0,
        "time": 0,
        "totals": Object {
          "errors": 0,
          "time": 0,
          "warnings": 0,
        },
      },
    },
    ExtractTextPlugin {
      "filename": "[md5:contenthash:hex:10].css",
      "id": -1,
      "options": Object {
        "allChunks": true,
      },
    },
    OccurrenceOrderPlugin {
      "preferEntry": undefined,
    },
    AggressiveMergingPlugin {
      "options": Object {},
    },
    GenerateSW {
      "config": Object {
        "chunks": Array [],
        "exclude": Array [
          /\\\\\\.map\\$/,
          /\\^manifest\\.\\*\\\\\\.js\\(\\?:on\\)\\?\\$/,
        ],
        "excludeChunks": Array [],
        "importScripts": Array [],
        "importWorkboxFrom": "cdn",
        "importsDirectory": "",
        "precacheManifestFilename": "precache-manifest.[manifestHash].js",
        "swDest": "service-worker.js",
      },
    },
  ],
}
`;
